--- a/settings.json
+++ b/settings.json
@@ -3,12 +3,12 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"Kurz Bot Assistan", 
-"NomorOwner":"6281220670449", 
-"NomorOwner2":"+62 812-2067-0449", 
-"NamaOwner":"KurrGamtenk", 
-"Dana":"081220670449", 
-"Pulsa":"081220670449", 
-"Gopay":"082298891772", 
+"NamaBot":"ASISTEN YAHYA", 
+"NomorOwner":"628819415951", 
+"NomorOwner2":"+62 881-9415-951", 
+"NamaOwner":"YahyaGamtenk", 
+"Dana":"08819415951", 
+"Pulsa":"085738398230", 
+"Gopay":"Minta ke owner🗿", 
 "HunterApi":"Ikyy69"
 }
